--- a/views/client/donghonam/donghonam.ejs
+++ b/views/client/donghonam/donghonam.ejs
@@ -97,15 +97,14 @@
                                                                                 <h4><a href="/chitietsp?id=<%= sp.masp %>"><%= sp.tensp %></a></h4>
                                                                                 <div class="product-price">
                                                                                     <ul>
-                                                                                        <li><%= sp.giatien %></li>
+                                                                                        <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien).split('₫')[1] + " VND" %></li>
                                                                                     </ul>
                                                                                 </div>
                                                                             </div>
                                                                             <div class="product-link">
                                                                                 <div class="product-button">
                                                                                     <a href="/giohang?id=<%= sp.masp %>" title="Add to cart"><i
-                                                                                            class="fa fa-shopping-cart"></i>Add
-                                                                                        to cart</a>
+                                                                                            class="fa fa-shopping-cart"></i>Thêm giỏ hàng</a>
                                                                                 </div>
                                                                                 <div class="add-to-link">
                                                                                     <ul>
