--- a/views/client/giohang/giohang.ejs
+++ b/views/client/giohang/giohang.ejs
@@ -47,11 +47,15 @@
                                                         <td class="product-thumbnail"><a href="#"><img src="client/img/product/<%= giohangs[i].hinhanh%>" alt=" " class="img-responsive"/></a></td>
                                                         <td class="product-name"><a href="#"><%= giohangs[i].tenthuonghieu %></a></td>
                                                         <td class="product-name"><a href="#"><%= giohangs[i].tensp%></a></td>
-                                                        <td id="price" class="product-price"><span id="price<%= giohangs[i].masp %>" class="amount"><%= giohangs[i].giatien%></span></td>
-                                                        <td class="product-quantity">
-                                                            <input id="<%= giohangs[i].masp%>" min="1" max="100" type="number" onChange="changeCount(this)" value="<%= giohangs[i].soluong%>"/>
+                                                        <td id="price" class="product-price">
+                                                            <span id="price<%= giohangs[i].masp %>" class="amount">
+                                                                <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(giohangs[i].giatien).split('₫')[1] + " VND" %>
+                                                            </span>
                                                         </td>
-                                                        <td id="total<%= giohangs[i].masp %>" class="product-subtotal"><%= giohangs[i].tongtien %></td>
+                                                        <td class="product-quantity">
+                                                            <input id="<%= giohangs[i].masp%>" min="1" max="10" type="number" onChange="changeCount(this)" value="<%= giohangs[i].soluong%>"/>
+                                                        </td>
+                                                        <td id="total<%= giohangs[i].masp %>" class="product-subtotal"><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(giohangs[i].tongtien).split('₫')[1] + " VND" %></td>
                                                         <td class="product-remove">
                                                             <a href="/giohang/xoagiohang?id=<%= giohangs[i].masp%>">Xóa</a>
                                                         </td>
@@ -59,7 +63,7 @@
                                                 <% }%>
                                              
                                             <tr>
-                                                <td colspan="7" >Tổng tiền: <span id="totalAmout"><% let totoal = 0; for(let i = 0; i < giohangs.length; i++){totoal += giohangs[i].tongtien;} %> <%= totoal %></span></td>
+                                                <td colspan="7" >Tổng tiền: <span id="totalAmout"><% let totoal = 0; for(let i = 0; i < giohangs.length; i++){totoal += giohangs[i].tongtien;} %> <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(totoal).split('₫')[1] + " VND" %></span></td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -92,11 +96,14 @@
             url: '/giohang/tinhsoluongvatongtien',
             data:{
                 idsp: input.id,
-                sl: input.value
+                sl: input.value,
             },
             success: function(data){
-                $(`#total${input.id}`).html(data.total);
-                $(`#totalAmout`).html(data.totalAmount)
+                
+                // console.log(new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(data.total).split('₫'));
+                $(`#total${input.id}`).html(new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(data.total).split('₫')[0] + " VND");
+                $(`#totalAmout`).html(new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(data.totalAmount).split('₫')[0] + " VND")
+                
             }, 
             error: function(){
 
