--- a/views/client/lichsumuahang/lichsumuahang.ejs
+++ b/views/client/lichsumuahang/lichsumuahang.ejs
@@ -43,7 +43,9 @@
                                                                 <%= el.tensp %> <br/>
                                                            <% }) %>  
                                                         </td>
-                                                        <td><%= sp.tonghoadon %></td>
+                                                        <td>
+                                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.tonghoadon).split('₫')[1] + " VND" %>
+                                                        </td>
                                                         <td><a href="/lichsumuahang/chitietdonhang?id=<%= sp.mahd%>">Xem chi tiết </a><a href="/lichsumuahang/huydonhang?id=<%= sp.mahd%>&idghtk=<%= sp.id_ghtk%>">| Hủy đơn hàng</a></td>
                                                     </tr>
                                                 <% }) %>
