--- a/views/client/tintuc/tintuc.ejs
+++ b/views/client/tintuc/tintuc.ejs
@@ -74,7 +74,7 @@
     </div>
     <!-- team-area-end -->
     <!-- skill-area-start -->
-    <div class="skill-area mb-70">
+    <!-- <div class="skill-area mb-70">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- skill-area-end -->
     
             <%- include ('../partials/footer'); -%>
