edit format currency

--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -100,7 +100,7 @@
                                                     <ul>
                                                         <li>
                                                             <!-- <%= sp.giatien %> -->
-                                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien).split('₫')[1] + " VND" %>                       
+                                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien) %>                       
                                                         </li>
                                                     </ul>
                                                     
